updating app.js structure. - animate the whole #scene without hiding elements in it. a) avoiding ANDROID recalculation layout problems; b) save scroll position in visited pages. - avoiding not necessary reflow in every touch move.

--- a/res/color.css
+++ b/res/color.css
@@ -1,4 +1,6 @@
-body {margin:0;}
+/* FRAMEWORK styles */
+
+body {margin:0}
 
 * {
     -webkit-user-select: none;
@@ -15,14 +17,17 @@ article     {
     width:100%; height: 100%; overflow-y: scroll; cursor:default;
     -webkit-overflow-scrolling: touch;
     font-smoothing: antialiased;
-
 }
 
 .pages      {top:0}
 
-.left       {left:-100%; z-index:2}
-.center     {left:0; z-index:3}
-.right      {left:100%; z-index:2}
+.atPage1    {left:0}
+.atPage2    {left:-100%}
+.atPage3    {left:-200%}
+
+.page1      {left:0; z-index:3}
+.page2      {left:100%; z-index:2}
+.page3      {left:200%; z-index:1}
 
 #scene  {
     width:100%; height: 100%; color: #2b0e48;
@@ -37,7 +42,7 @@ article::-webkit-scrollbar {
 
 
 
-
+/* TEXT styles */
 
 .fl_left {float:left; padding: 0 10px 10px 0}
 .fl_right {float:right; padding: 0 0 10px 10px}
